# Zoomy-Zodiacs

./: .gitignore  .pdm-python  .pre-commit-config.yaml  DEV_SETUP.md  EXAMPLE_tags.db  EXAMPLE_users.db  LICENSE.txt  README.md  example_zz.db  pyproject.toml  template.env  test.db
.github/workflows/: deploy.yml  lint.yaml
ZoomyZodiacs/src/: bot.py
bot/: __main__.py  bot.py  errors.py  settings.py  to_number.py
bot/exts/: error_handler.py  greet.py  greetings.py  help.py  tag_commands.py  tags.py  test_commands.py
bot/repositories/: tags.py
tests/: test_tags.py  test_to_number.py
