[project]
name = "zoomyzodiacs"
version = "0.1.0"
description = "Entry into the Python Discord Code Jam 2024"
authors = [
    {name = "Beardrop2", email = "benjamin.ghwik@gmail.com"},
]
dependencies = [
    "ruff~=0.5.0",
    "pre-commit~=3.7.1",
    "pytest>=8.2.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.ruff]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
# The original reason for this limit was a standard vim terminal is only 79 characters,
# but this doesn't really apply anymore.
line-length = 119
# Target Python 3.12. If you decide to use a different version of Python
# you will need to update this value.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true
# The directory containing the source code. If you choose a different project layout
# you will need to update this value.


[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
    # Annotations.
    "ANN101",
    "ANN102",
]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra -q"
python_files = "test_*.py"
testpaths = [
    "tests"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
