[project]
name = "zoomy-zodiacs"
version = "0"
requires-python = "==3.12.*"
dependencies = [
    "pytest>=8.2.2",
]

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.5.2", "pre-commit>=3.7.1", "pytest>=8.2.2"]

[tool.pdm.scripts]
test = {cmd = "python -m pytest"}

# Start main, pipe output to a log file, and the pid to pid.txt

[tool.ruff]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
# The original reason for this limit was a standard vim terminal is only 79 characters,
# but this doesn't really apply anymore.
line-length = 119
# Target Python 3.12. If you decide to use a different version of Python
# you will need to update this value.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
    # Annotations.
    "ANN101",
    "ANN102",
]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra -q"
python_files = "test_*.py"
testpaths = [
    "tests"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
